# kabamdam

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ROADMAP.md  Session.vim  implementation_plan.md  local.shada  pyproject.toml  roadmapinfo.md  task.md  timesheets_example.md
.agent/roles/: architect.md  business_analyst.md  code_reviewer.md  developer.md  product_owner.md  project_manager.md  test_engineer.md
.agent/rules/: agenticWorkflow.md  agentic_workflow.md
.agent/workflows/: create_function_class.md  createfunctionclass.md  define_project_vision.md  defineprojectvision.md  implement_task.md  implementtask.md
docs/: README.md
docs/roadmap/: ROADMAP.md
docs/specs/: roadmap_parser_spec.md  status_mapping_spec.md  svg_generator_spec.md  timesheet_parser_spec.md  timestamp_extraction_spec.md
scripts/: verify_svg.py
specs/: 1.3.1_behaviors.md  1.3.1_design.md  1.3.1_test_plan.md  2.1_behaviors.md  2.1_design.md  2.1_test_plan.md  2.2_behaviors.md  2.2_design.md  2.2_test_plan.md
src/kabamdam/: main.py  parser.py  svg_generator.py  timesheet.py
tests/: test_cli.py  test_pre_commit.py  test_roadmap_parser.py  test_svg_generator.py  test_timesheet_parser.py
